--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP2ZxaWM/3SyxC69+AAqFr7",
+      "authorship_tag": "ABX9TyNCliLgIrI1fUTfHojqynYY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,13 +43,31 @@
         "import torch\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "print(\"Hello this is pytorch fundaments\")\n",
+        "print(torch.__version__)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "__6w2UpBcfmX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "__6w2UpBcfmX",
+        "outputId": "9bc6fc71-2ac0-44e7-870b-19e0535fd742"
       },
-      "execution_count": 7,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello this is pytorch fundaments\n",
+            "2.0.1+cu118\n"
+          ]
+        }
+      ]
     }
   ]
 }
