--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNCliLgIrI1fUTfHojqynYY",
+      "authorship_tag": "ABX9TyNF+26ffAfMOvBCICcnvQNT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 00. PyTorch Fundaments"
+        "# 00. PyTorch Fundaments\n",
+        "import torch\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "print(\"Hello this is pytorch fundaments\")\n",
+        "print(torch.__version__)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "_t8Rf2_OX72i"
