--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNF+26ffAfMOvBCICcnvQNT",
+      "authorship_tag": "ABX9TyPktZ4BF1QBwykEmg6d7aCY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,13 +32,6 @@
       "cell_type": "markdown",
       "source": [
         "# 00. PyTorch Fundaments\n",
-        "import torch\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "print(\"Hello this is pytorch fundaments\")\n",
-        "print(torch.__version__)\n",
         "\n",
         "\n"
       ],
@@ -53,7 +46,36 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "\n",
+        "print(\"Hello this is pytorch fundaments\")\n",
+        "print(torch.__version__)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8opZ2hie0Tcq",
+        "outputId": "7bf2efbf-c2f4-460e-cf91-ec8dfb142042"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello this is pytorch fundaments\n",
+            "2.0.1+cu118\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "print(\"Hello this is pytorch fundaments\")\n",
         "print(torch.__version__)\n",
         "\n",
@@ -66,7 +88,7 @@
         "id": "__6w2UpBcfmX",
         "outputId": "9bc6fc71-2ac0-44e7-870b-19e0535fd742"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
