Introduction to tensor

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPktZ4BF1QBwykEmg6d7aCY",
+      "authorship_tag": "ABX9TyOumEjYwsT/nDkAYBKr3Mme",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,13 +51,13 @@
         "\n"
       ],
       "metadata": {
+        "id": "8opZ2hie0Tcq",
+        "outputId": "1bbb7a31-acbc-4928-bf41-732c6ee2c5a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "8opZ2hie0Tcq",
-        "outputId": "7bf2efbf-c2f4-460e-cf91-ec8dfb142042"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,33 +72,280 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "print(\"Hello this is pytorch fundaments\")\n",
-        "print(torch.__version__)\n",
-        "\n",
-        "\n"
+        "#scalar\n",
+        "scalar = torch.tensor(7)\n",
+        "scalar\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "__6w2UpBcfmX",
-        "outputId": "9bc6fc71-2ac0-44e7-870b-19e0535fd742"
+        "id": "LKqaIb4KyPjg",
+        "outputId": "4a45f36a-c994-45ce-b17c-84affe78b22d"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello this is pytorch fundaments\n",
-            "2.0.1+cu118\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scalar.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HUBeqBZ8yg4b",
+        "outputId": "db631cd3-fd01-4603-a2c3-cc351689c173"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get tensor back as python list\n",
+        "scalar.item()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qegjhjisy7TC",
+        "outputId": "2ffe795c-fa10-4bed-9bbd-d5e2847505ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Vector\n",
+        "vector = torch.tensor([7,7])\n",
+        "vector\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wSDMA4uwzQo_",
+        "outputId": "25b1417f-63f5-40f0-ef24-8b2f22f1d6e2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([7, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bDhuHRpQ0swj",
+        "outputId": "ef8fb306-f6ba-4044-d144-61936c283ccb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5M0WGN20wkp",
+        "outputId": "8285c6f4-2d86-407e-99d3-3db4fdfe32e4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function Tensor.size>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O1pUovJc023m",
+        "outputId": "8172cba2-1595-49ea-ab01-a284a4d3ed55"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Matrix\n",
+        "matrix = torch.tensor([[7,9],\n",
+        "                      [9,12]])\n",
+        "matrix\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TNHZbyM5076x",
+        "outputId": "8887c7b5-bc41-487c-83e9-b06c9329969b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7,  9],\n",
+              "        [ 9, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YWw_RppM1QOV",
+        "outputId": "8424729b-21b4-4a9b-8ac1-7a587ca6a093"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0FtDhY6a1bSx",
+        "outputId": "e472f5b3-72ec-4640-de18-59ac7550e2d1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hUZRPM9Q1g2z"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
