--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOLr5IFb9lJ/r+4cF+/iEah",
+      "authorship_tag": "ABX9TyOAGPaYPbZLWZXUmaH6s9Wt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,9 +724,376 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Create a tenson with similar size to an image\n",
+        "rImageSizeTensor = torch.rand(size=(224,224,3))\n",
+        "rImageSizeTensor.shape, rImageSizeTensor.ndim\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "moqRU9ci_I1f",
+        "outputId": "861273f6-ea33-416f-e981-25b9d5299d31"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([224, 224, 3]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Zeros and Ones\n"
+      ],
+      "metadata": {
+        "id": "hjRknMiaGwc6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Zeros\n",
+        "zeros = torch.zeros(3,3)\n",
+        "zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jkt5gG3oHuA0",
+        "outputId": "08e77056-e23a-44e7-c71d-08cd06c97e6d"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.],\n",
+              "        [0., 0., 0.],\n",
+              "        [0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ones\n",
+        "Ones = torch.ones(size=(4,3))\n",
+        "Ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zWTS-uaLIOyh",
+        "outputId": "4f0fcf37-588f-47d8-d861-a96dfa00d1be"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1.],\n",
+              "        [1., 1., 1.],\n",
+              "        [1., 1., 1.],\n",
+              "        [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Ones.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FuOQY8-sIUsr",
+        "outputId": "6f0ba33d-a8ae-4138-d3c5-2668d270ccba"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G0_jVxCcIZxm",
+        "outputId": "526f5fc6-d52b-4552-c388-8cce07ecfc28"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Creatig the Range of Tensors and tensor-like"
+      ],
+      "metadata": {
+        "id": "AsOHNm7oIfsz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using Tourch arange\n",
+        "range= torch.arange(2,10)\n",
+        "range"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oFIUfeGmI0_M",
+        "outputId": "485801b6-7138-446d-960f-ca8edcdb90b8"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using the arange\n",
+        "one_to_ten = torch.arange(start= 1, end=11, step=1)\n",
+        "one_to_ten\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JUUzlWW2JK_6",
+        "outputId": "a003cd2b-44e5-440d-a480-953a8c42f108"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tensor like methods\n",
+        "ten_zeros= torch.zeros_like(input=one_to_ten)\n",
+        "ten_zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tk9J24iyPeVY",
+        "outputId": "b16f2928-f3aa-4383-8e46-7d2ed06ab5c3"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ten_ones= torch.ones_like(input=one_to_ten)\n",
+        "ten_ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kjb10MgQQBm5",
+        "outputId": "dfc35a75-8515-4fe2-ac4c-ca32f4da0e23"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Tensor Datatypes"
+      ],
+      "metadata": {
+        "id": "YOkW2FixQtXx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.core import display_trap\n",
+        "# Float 32 tensor\n",
+        "float_32_tensor = torch.tensor([4.3,2.0,4.0],\n",
+        "                               dtype=None,\n",
+        "                               device=\"cuda\",\n",
+        "                               requires_grad=False\n",
+        "\n",
+        "                               )\n",
+        "float_32_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "duMGDDgnRDjq",
+        "outputId": "688debe6-5b87-486d-fa44-c3cbf9617d21"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([4.3000, 2.0000, 4.0000], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_32_tensor.dtype\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_w4EXIYxToWp",
+        "outputId": "f67cfb52-f418-4f25-df3d-f08c27ade111"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#float 16\n",
+        "float_16 = float_32_tensor.type(torch.float16)\n",
+        "float_16.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EdiMlUnrUuPG",
+        "outputId": "85b3c6c2-e6bb-4e32-a52a-991b65fa5efa"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "moqRU9ci_I1f"
+        "id": "wkTL_eZVU-wM"
       },
       "execution_count": null,
       "outputs": []
