--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOAGPaYPbZLWZXUmaH6s9Wt",
+      "authorship_tag": "ABX9TyNkECtUo7WAxJmWWvXfbOIt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,12 @@
       ],
       "metadata": {
         "id": "8opZ2hie0Tcq",
-        "outputId": "1bbb7a31-acbc-4928-bf41-732c6ee2c5a0",
+        "outputId": "77e5f513-de73-45ac-ea27-6f29857b02c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         },
         "outputId": "271093a2-95cc-4776-abb9-d26082b5b763"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +382,7 @@
         "id": "kPfsrc138AVs",
         "outputId": "287049df-4d14-4878-f15d-34f987ca1e26"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
         "id": "aXbyjf_J8ESg",
         "outputId": "a47dbb0d-8fb7-468a-e480-9bb4b160b4db"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +434,7 @@
         "id": "XTyG0A0v8IvW",
         "outputId": "79990753-c487-4ee5-b6cf-224140f84abb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
         "id": "CO3-XFB49N-O",
         "outputId": "29f95872-9701-4b25-c382-addb388d7a41"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
         "id": "99lh5xlH--ne",
         "outputId": "e7233ba0-ec85-4b31-c399-412326deef88"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
         "id": "moqRU9ci_I1f",
         "outputId": "861273f6-ea33-416f-e981-25b9d5299d31"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +773,7 @@
         "id": "Jkt5gG3oHuA0",
         "outputId": "08e77056-e23a-44e7-c71d-08cd06c97e6d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
         "id": "zWTS-uaLIOyh",
         "outputId": "4f0fcf37-588f-47d8-d861-a96dfa00d1be"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,7 +832,7 @@
         "id": "FuOQY8-sIUsr",
         "outputId": "6f0ba33d-a8ae-4138-d3c5-2668d270ccba"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
         "id": "G0_jVxCcIZxm",
         "outputId": "526f5fc6-d52b-4552-c388-8cce07ecfc28"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -895,7 +895,7 @@
         "id": "oFIUfeGmI0_M",
         "outputId": "485801b6-7138-446d-960f-ca8edcdb90b8"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +923,7 @@
         "id": "JUUzlWW2JK_6",
         "outputId": "a003cd2b-44e5-440d-a480-953a8c42f108"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +951,7 @@
         "id": "Tk9J24iyPeVY",
         "outputId": "b16f2928-f3aa-4383-8e46-7d2ed06ab5c3"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +978,7 @@
         "id": "Kjb10MgQQBm5",
         "outputId": "dfc35a75-8515-4fe2-ac4c-ca32f4da0e23"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
         "id": "duMGDDgnRDjq",
         "outputId": "688debe6-5b87-486d-fa44-c3cbf9617d21"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1047,7 +1047,7 @@
         "id": "_w4EXIYxToWp",
         "outputId": "f67cfb52-f418-4f25-df3d-f08c27ade111"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1075,7 +1075,7 @@
         "id": "EdiMlUnrUuPG",
         "outputId": "85b3c6c2-e6bb-4e32-a52a-991b65fa5efa"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1091,9 +1091,199 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#creating tensor\n",
+        "\n",
+        "some_tensor= torch.rand(3,4)\n",
+        "\n",
+        "print(\" The tensor is some_tensor\")\n",
+        "print(f\" The data type of tensor is: {some_tensor.dtype}\")\n",
+        "print(f\" The shape of tensor is: {some_tensor.shape}\")\n",
+        "print(f\" The device type of tensor is: {some_tensor.device}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wkTL_eZVU-wM",
+        "outputId": "79fb8340-447e-4a25-b123-0f11652d05a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " The tensor is some_tensor\n",
+            " The data type of tensor is: torch.float32\n",
+            " The shape of tensor is: torch.Size([3, 4])\n",
+            " The device type of tensor is: cpu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Manupulating the Tensor operations\n",
+        "* Addition\n",
+        "* Subtraction\n",
+        "* Multiplication\n",
+        "* Division"
+      ],
+      "metadata": {
+        "id": "oua-mKtgcxeI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Creating the tensor\n",
+        "data = torch.tensor([1,2,3])\n"
+      ],
+      "metadata": {
+        "id": "-ui2BJjgBocR"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.add(data,10)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tztOwTA4B9Ey",
+        "outputId": "13c8d012-c0d7-41ca-89d5-92fa1762db92"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([11, 12, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiply\n",
+        "data *4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yktk_reuCc7C",
+        "outputId": "c9936962-2f36-48f8-92c3-382f75857692"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 4,  8, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.mul(data,10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iNFA-yHzCtzj",
+        "outputId": "497626df-adee-477d-cee4-11bf79e995fe"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([10, 20, 30])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Subtract\n",
+        "data-10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZVt1Pn1KCx1E",
+        "outputId": "1a76c988-8b80-41ad-fe4e-83d83406fe62"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-9, -8, -7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.sub(data, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z9Qo4HDeC3lD",
+        "outputId": "7546c1f4-9c06-480a-e3db-bd011c198c1b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-9, -8, -7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wkTL_eZVU-wM"
+        "id": "3wz9MWhaC88T"
       },
       "execution_count": null,
       "outputs": []
