--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNkECtUo7WAxJmWWvXfbOIt",
+      "authorship_tag": "ABX9TyMcG3hWTRgkScethfNbsnpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,12 @@
       ],
       "metadata": {
         "id": "8opZ2hie0Tcq",
-        "outputId": "77e5f513-de73-45ac-ea27-6f29857b02c1",
+        "outputId": "a419348f-87f7-40bc-f56e-53d913cbc794",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1144,7 @@
       "metadata": {
         "id": "-ui2BJjgBocR"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1159,7 +1159,7 @@
         "id": "tztOwTA4B9Ey",
         "outputId": "13c8d012-c0d7-41ca-89d5-92fa1762db92"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
         "id": "yktk_reuCc7C",
         "outputId": "c9936962-2f36-48f8-92c3-382f75857692"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,7 +1212,7 @@
         "id": "iNFA-yHzCtzj",
         "outputId": "497626df-adee-477d-cee4-11bf79e995fe"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1239,7 @@
         "id": "ZVt1Pn1KCx1E",
         "outputId": "1a76c988-8b80-41ad-fe4e-83d83406fe62"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1265,7 +1265,7 @@
         "id": "z9Qo4HDeC3lD",
         "outputId": "7546c1f4-9c06-480a-e3db-bd011c198c1b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1280,10 +1280,203 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Matrix Multiplication\n",
+        "* Element by element\n",
+        "* Matrix multiply (dot product)"
+      ],
+      "metadata": {
+        "id": "3wz9MWhaC88T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiplying each element\n",
+        "print(f\" Equals: {data * data}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h2YyO2ccH-8J",
+        "outputId": "322c3628-b6f8-4295-aed5-e8e4200a8796"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Equals: tensor([1, 4, 9])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multiplying matrix element\n",
+        "\n",
+        "matrix = torch.matmul(data,data)\n",
+        "matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ofUZtH73ICrV",
+        "outputId": "b3683e8f-ebb2-4928-edd4-acab6ded2c36"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(14)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#matrix multiplication by hand\n",
+        "1*1 +2*2 + 3*3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "azLlZCcLJVV_",
+        "outputId": "c7e45726-a0ab-4f50-83ce-7a84bcfdf80e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "value =0\n",
+        "for i in range(len(data)):\n",
+        "  value+= data[i] * data[i]\n",
+        "print(value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J6RNTUEALpi4",
+        "outputId": "ad5e4594-c5c8-4f52-f35b-87552dfc2e7d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(14)\n",
+            "CPU times: user 2.05 ms, sys: 0 ns, total: 2.05 ms\n",
+            "Wall time: 1.95 ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "torch.matmul(data,data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W80W6xUnNW9a",
+        "outputId": "2e4a8435-5446-4b07-8a76-ee08c2bed369"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 2.32 ms, sys: 27 µs, total: 2.35 ms\n",
+            "Wall time: 2.22 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(14)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Matrix Multiplications\n",
+        "\n",
+        "torch.matmul( torch.rand([10,10]),torch.rand([10,2]))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yMoeOQ-qNkrZ",
+        "outputId": "6b46862a-a76d-4032-adda-ced261b2e75a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2.3417, 3.3719],\n",
+              "        [2.0878, 2.7555],\n",
+              "        [2.0420, 3.2135],\n",
+              "        [2.4353, 3.1207],\n",
+              "        [2.0108, 3.0225],\n",
+              "        [1.5406, 2.9364],\n",
+              "        [2.0200, 2.7282],\n",
+              "        [1.7339, 2.7416],\n",
+              "        [2.4699, 3.0962],\n",
+              "        [2.1384, 4.2255]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3wz9MWhaC88T"
+        "id": "8QNZQLgmbe_M"
       },
       "execution_count": null,
       "outputs": []
